[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tiles/Level3/BossLevel_SpaceShip.png" type="Texture" id=1]
[ext_resource path="res://Objects/Rocket/Jet1.tscn" type="PackedScene" id=2]
[ext_resource path="res://TraumaBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Rocket/Rocket.gd" type="Script" id=4]
[ext_resource path="res://sfx/rocket_boom.wav" type="AudioStream" id=5]
[ext_resource path="res://EOL.tscn" type="PackedScene" id=6]

[node name="Rocket" type="KinematicBody2D"]
z_index = -1
collision_layer = 8
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -236.5, 341.5 )
scale = Vector2( 24.0625, 104.375 )
polygon = PoolVector2Array( 2.6308, 2.33653, 2.63261, 2.09813, 2.12702, 2.09885, 1.89613, 2.10265, 1.87964, 1.91064, 6.05709, 2.09984, 6.04835, 2.22169, 6.25694, 2.22173, 6.25665, 2.33807, 5.75982, 2.33759, 5.75813, 2.39408, 3.17167, 2.39648, 3.17167, 2.33813 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )

[node name="Jet1" parent="." instance=ExtResource( 2 )]
position = Vector2( -128, 584 )
scale = Vector2( 0.3, 0.25 )
z_index = -1
emitting = false
amount = 5000
lifetime = 0.5
speed_scale = 1.0
lifetime_randomness = 0.64
initial_velocity = 370.05

[node name="Jet2" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 584 )
scale = Vector2( 0.3, 0.25 )
z_index = -1
emitting = false
amount = 5000
lifetime = 0.5
speed_scale = 1.0
lifetime_randomness = 0.64
initial_velocity = 370.05

[node name="TraumaBlock" parent="." instance=ExtResource( 3 )]
position = Vector2( -128, 624 )

[node name="TraumaBlock2" parent="." instance=ExtResource( 3 )]
position = Vector2( 136, 624 )

[node name="JetBoom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 24.0
pitch_scale = 0.45
max_distance = 1e+06
bus = "Sfx"

[node name="EOL" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 104 )
scale = Vector2( 0.1, 0.003 )
next_path = "res://Menus/ThanksForPlayingScreen/ThanksForPlayingScreen.tscn"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
